--- a/event_planning_test_client/src/styles.css
+++ b/event_planning_test_client/src/styles.css
@@ -1,2 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/ngx-toastr/toastr.css";
+@import url("https://fonts.googleapis.com/css2?family=Agdasima&family=Poppins&display=swap");
+
+body {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(to bottom right, #70c1ff, #498ffc);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+a {
+  color: red;
+  text-decoration: none;
+  text-transform: uppercase;
+}
