--- a/event_planning_test_client/src/components/home/home.component.html
+++ b/event_planning_test_client/src/components/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <a href="/login">Вход</a>
+  <a href="/account/login">Вход</a>
   <a href="/account/registration">Регистрация</a>
 </div>
